Optimized imports, artifact rename, and test organization arguments beautify